Properly unmap minimized and hidden X11 windows

Amends 0b6decb103b01187d7665cc9942687df1f1ff22f.

This is what kwin used to do prior to the split. Video games probably
break because they monitor UnmapNotify events, and with internalKeep()
they never arrive.

BUG: 504321

(cherry picked from commit ba13665e9ea72da5e52c8d486dc97c9e987498c1)